@@ -61,6 +61,9 @@
  - (dtucker) [openbsd-compat/setproctitle.c] Include stdarg.h.
  - (dtucker) [ssh-keyscan.c ssh-rand-helper.c] More errno.h here too.
  - (dtucker) [openbsd-compat/openbsd-compat.h] v*printf needs stdarg.h.
+ - (dtucker) [openbsd-compat/bsd-asprintf.c openbsd-compat/port-aix.c
+   openbsd-compat/rresvport.c] More errno.h.
+
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
